# text-image

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  conftest.py  langgraph.json  package.json  pyproject.toml  pyrightconfig.json  skill.md
.agents/skills/log-slice-analyze/: SKILL.md
.agents/skills/log-slice-analyze/references/: default_analysis_prompt.md
.agents/skills/log-slice-analyze/scripts/: slice_log.py
.claude/skills/log-slice-analyze/: SKILL.md
.langgraph_api/: .langgraph_ops.pckl
.superpowers/brainstorm/10118-1781154410/content/: architecture-overview.html  waiting-1.html
.superpowers/brainstorm/10118-1781154410/state/: server-stopped
.windsurf/rules/: project-rules.md
api/: graph_runner.py  main.py  models.py  runs_db.py
api/routers/: interact.py  novels.py  runs.py
apps/backend/: main.py
apps/backend/api/v1/: router.py
apps/backend/api/v1/endpoints/: files.py  fs.py  graph.py  inspect.py  interact.py  narration_presets.py  novel_reference.py  novels.py  prompt_evolution.py  prompt_evolution_run.py  render.py  runs.py  voices.py
apps/backend/db/: runs_db.py
apps/backend/schemas/: models.py
apps/backend/services/: graph_runner.py  narration_presets_store.py  render_service.py  render_session.py  workspace.py
apps/frontend/: package.json  tsconfig.app.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: client.ts
apps/frontend/src/components/flow/: FlowCanvas.tsx  InternalNode.tsx  SubgraphNode.tsx  multiHandles.tsx
apps/frontend/src/components/forms/: NovelParamsFields.tsx  StartRunForm.tsx  startRunSchema.ts
apps/frontend/src/components/layout/: MainContent.tsx  Sidebar.tsx
apps/frontend/src/components/novel/: ChapterProse.tsx  ChapterReader.tsx  CharacterReader.tsx  NovelInfoDrawer.tsx  SceneReader.tsx  WorldviewPanel.tsx
apps/frontend/src/components/panels/: AudioConfigPanel.tsx  ChapterAdvancePanel.tsx  ChapterGroupingPanel.tsx  ChapterReviewPanel.tsx  CheckpointTimeline.tsx  FinalDecisionPanel.tsx  FullbodySelector.tsx  GenericReviewPanel.tsx  ImageRenderPanel.tsx  InitialCharactersReviewPanel.tsx  (+8 more)
apps/frontend/src/constants/: nodeLabels.ts
apps/frontend/src/hooks/: useDirBrowser.ts  useGraphSchema.ts  useNarrationPresets.ts  useNovelChapters.ts  useRunResource.ts  useRunStream.ts  useWorkDirs.ts
apps/frontend/src/lib/: chapterLabel.ts  characterLabel.ts
apps/frontend/src/pages/: PromptEvolutionPage.tsx  PromptInspectPage.tsx  RenderWorkbenchPage.tsx  RunPage.tsx
apps/frontend/src/store/: runStore.ts
apps/frontend/src/utils/: date.ts
config/: services.json
config/workflows/: QwenEdit2511-单图+双图编辑_可选双图_v1.json  qwen_edit_4step.json  qwen_edit_8step.json  qwen_t2i.json  wf_fullbody_with_face.json  wf_hires_2x.json  wf_portrait_init.json  wf_t2i_scene.json
docs/: chapter-grouping.md  chapter-pipeline-refactor.md  code-review-dynamic-graph-schema.md  delegation-refactor-plan.md  delegation-refactor-review.md  graph-visualization.md  narration-scheme.md  plain-paragraph-scheme-plan.md  plan-checkpoint-timeline.md  plan-generic-review-node.md  plan-state-inspector.md
docs/exec-plan-2026-06-19_20-20-46/: 01-schema-foundation.md  02-subgraph-structure.md  03-upstream-llm.md  04-interrupt-nodes.md  05-render-subnodes.md  06-setup-refactor.md  07-upload-api.md  08-frontend-panels.md  09-e2e-verify.md  README.md  checkpoint.json  original-plan.md  split-audit.md  step.json
docs/plans/: plan-dynamic-graph-schema.md  plan-error-display.md
docs/render-decouple/: overview.md  progress.md  steps.md
docs/superpowers/plans/: 2026-06-11-plan-a-foundation.md  2026-06-11-plan-b-graph.md  2026-06-11-plan-c-fastapi-backend.md  2026-06-11-plan-d-react-flow-canvas.md  2026-06-11-plan-e-interaction-panels.md
docs/superpowers/specs/: 2026-06-11-fastapi-react-frontend-design.md  2026-06-11-novel-to-multimedia-design.md
scripts/: dev.sh  install_draft.py  smoke_export_jianying.py
src/novel2media/: config.py  graph.py  logger.py  workflows.py
src/novel2media/clients/: comfyui.py  tts.py
src/novel2media/nodes/: image_nodes.py  setup_nodes.py
src/novel2media/subgraphs/: chapter.py  init_graph.py  setup.py
tests/: conftest.py  test_graph.py  test_llm.py  test_logger.py  test_state.py
tests/api/: conftest.py  test_graph_runner.py  test_models.py  test_routers.py  test_runs_db.py
tests/backend/: conftest.py  test_files_upload.py  test_graph_runner.py  test_models.py  test_narration_presets.py  test_prompt_evolution_run.py  test_render_service.py  test_render_session.py  test_routers.py  test_runs_db.py  test_stream_replay.py  test_workspace.py
tests/clients/: test_comfyui.py  test_tts.py
tests/nodes/: test_chapter_nodes.py  test_init_nodes.py  test_setup_nodes.py
tests/novel2media-core/: test_chapter_e2e_interrupt.py  test_chapter_prompts.py  test_chapters.py  test_config.py  test_graph.py  test_init_e2e_interrupt.py  test_init_prompts.py  test_llm_json_retry.py  test_logger.py  test_narration_schemes.py  test_prompts_parse.py  test_render_planning.py  test_rule_synthesis.py  test_state.py  test_workflows.py
tests/novel2media-core/audio/: test_pipeline.py  test_subtitles.py
tests/novel2media-core/clients/: test_comfyui.py  test_tts.py
tests/novel2media-core/fixtures/: horror_viral_adapt_third_person.golden.txt
tests/novel2media-core/jianying/: test_draft_builder.py
tests/novel2media-core/nodes/: test_chapter_nodes.py  test_image_nodes.py  test_init_nodes.py  test_render_synthesize_audio.py  test_setup_nodes.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/src/api/: client.ts
web/src/components/flow/: FlowCanvas.tsx  InternalNode.tsx  SubgraphNode.tsx
web/src/components/forms/: StartRunForm.tsx
web/src/components/layout/: Sidebar.tsx
web/src/components/panels/: CheckpointTimeline.tsx  InteractionDispatcher.tsx  NewCharacterDecision.tsx  PortraitSelector.tsx
web/src/components/ui/: form.tsx  sheet.tsx
web/src/hooks/: useRunStream.ts
web/src/pages/: RunPage.tsx
web/src/store/: runStore.ts
(+13 files in other folders)
