[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel2media"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.4.28",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/novel2media-core/src/novel2media", "apps/backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "apps/backend", "packages/novel2media-core/src"]
