[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel2media"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "json-repair>=0.30.0",
    "langgraph-cli[inmem]>=0.4.28",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "pyjianyingdraft>=0.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "pyright>=1.1.400",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/novel2media-core/src/novel2media",
    "packages/novel2media-logging/src/novel2media_logging",
    "apps/backend",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "apps/backend", "packages/novel2media-core/src", "packages/novel2media-logging/src"]

# pyright 配置见根目录 pyrightconfig.json（pyright 优先读它，本处 [tool.pyright] 会被完全忽略，
# 故不在此重复以免两份配置分叉——历史上正是分叉导致 exclude tests / reportArgumentType 降级从未生效）。

[tool.ruff]
line-length = 120
lint.select = [
    "F",      # Pyflakes（未定义变量、未使用导入 - 真正的 bug）
    "E",      # pycodestyle 错误（语法相关）
    "B",      # flake8-bugbear（常见逻辑错误）
    "I",      # isort 导入排序
]

# 只保留高价值的 Ruff 规则
lint.extend-select = [
    "RUF006",  # asyncio.create_task 未存储引用（任务会被 GC）
    "RUF010",  # f-string 转换错误
    "RUF015",  # 无用的表达式
    "RUF017",  # 不可迭代对象用于 for 循环
]
lint.ignore = [
    "RUF001",  # 字符串中文全角字符（中文项目正常使用）
    "RUF002",  # docstring 中文全角字符（中文项目正常使用）
    "RUF003",  # 中文全角字符检查（中文注释中正常使用）
    "E501",    # 行长度（已配置 line-length，这里排除冲突）
    "E402",    # 模块级 import 未在文件顶部（apps/backend/main.py 的 sys.path.insert 后导入是有意的）
    "ARG001",  # 未使用的函数参数（占位节点、回调等场景正常）
    "UP042",   # StrEnum 建议（向后兼容考虑暂时保留）
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002", "F841"]  # 测试文件：允许未使用参数和变量

[tool.ruff.lint.flake8-bugbear]
# FastAPI 依赖注入惯用法：File/Form/Query/Depends 等在参数默认值里调用是标准写法，非 B008 隐患
extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Depends",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
]

[project.scripts]
backend = "uvicorn.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# E402：导入顺序（sys.path.insert 后导入是有意的，不警告）
